updated details, exept the introduction and where from

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <h1>Where I'm From</h1>
       <p>White Bear Lake, MN</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Video games and working on my car</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Information Technology</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>White Bear Lake, MN</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To put me on a path to be in IT</p>
     </section>
 
     <footer id="footer">
